--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -1,3 +1,15 @@
+html, body {
+	height: 100%;
+	min-height: 100%;
+}
+
 body {
-	background: blue;
+	background: #29262b;
+	color: #dbe2e6;
+
+	&.loaded {
+		background: url('../images/bg-min.jpg');
+		background-size: cover;
+		background-position: 50% 0;
+	}
 }
