--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -1,9 +1,10 @@
-html, body {
+html, body, app {
 	height: 100%;
 	min-height: 100%;
 }
 
-body {
+app {
+	display: block;
 	background: #29262b;
 	color: #dbe2e6;
 
