--- a/assets/index.pug
+++ b/assets/index.pug
@@ -25,8 +25,6 @@ html
 				.sk-circle12.sk-child
 		//- inject:js
 		//- endinject
-		script(src='systemjs.config.js')
+		script(inline, src='systemjs.config.js')
 		script.
-			System.import('app').catch(function (err) {
-				console.error(err);
-			});
+			System.import('app');
