--- a/assets/templates/app.pug
+++ b/assets/templates/app.pug
@@ -2,30 +2,118 @@
 	.row
 		.col-md-8.text-xs-center.text-md-right
 			h4 in progress
-			progress.progress.progress-striped.progress-danger.progress-animated(value=10, max=100)
+			progress.progress.progress-striped.progress-danger.progress-animated(value=15, max=100)
 		.col-md-4.text-xs-center
 			img.photo(src='https://www.gravatar.com/avatar/8802c03fd20b3b6ce67c4f3e03270409?s=200')
-.container.card.primary-links
+.container.card.primary-links(style='opacity: .2')
 	.row.text-xs-center
 		a.btn.btn-primary(href='https://github.com/mindfreakthemon/')
-			span.icon-panic-github
+			span.pic.pic-github
 		a.btn.btn-primary.disabled
-			span.icon-panic-tumblr
+			span.pic.pic-tumblr
 		a.btn.btn-primary.disabled
-			span.icon-panic-twitter
+			span.pic.pic-twitter
 		a.btn.btn-primary.disabled
-			span.icon-panic-linkedin
+			span.pic.pic-linkedin
 		a.btn.btn-primary.disabled
-			span.icon-panic-instagram
+			span.pic.pic-instagram
 		a.btn.btn-primary.disabled
-			span.icon-panic-facebook
+			span.pic.pic-facebook-square
 		a.btn.btn-primary(href='skype:vitaliy.r4?chat')
-			span.icon-panic-skype
+			span.pic.pic-skype
 		a.btn.btn-primary.disabled
-			span.icon-panic-foursqare
+			span.pic.pic-foursquare
 		a.btn.btn-primary.disabled
-			span.icon-panic-google
+			span.pic.pic-google-plus
 		a.btn.btn-primary.disabled
-			span.icon-panic-reddit
+			span.pic.pic-lastfm
+		a.btn.btn-primary.disabled
+			span.pic.pic-pinterest
+		a.btn.btn-primary.disabled
+			span.pic.pic-vk
+		a.btn.btn-primary.disabled
+			span.pic.pic-reddit
 		a.btn.btn-primary(href='mailto:lost@middle-of-nowhere.name')
-			span.icon-envelope
+			span.pic.pic-envelope
+.container.card(style='opacity: .2')
+	.row
+		.col-xs-12
+			h2 Employment history
+
+			.media
+				.media-body
+					h4.media-heading Playtech, Kyiv, Ukraine
+					h6 Front-end developer / Dev Team Leader (10/2013 - current)
+
+					h6 Job description:
+					ul
+						li developing business features with Agile Scrum/Kanban
+						li improving development process with automation tools
+
+					h6 Developed projects:
+					ul
+						li http://www.acekingdom.com/
+						li http://casino.ladbrokes.com/
+						li http://poker.ladbrokes.com/
+						li http://livedealer.ladbrokes.com/
+						li http://vegas.ladbrokes.com/
+						li http://bingo.ladbrokes.com/
+						li ... etc
+
+			.media
+				.media-body
+					h4.media-heading Plasticjam, Kyiv, Ukraine
+					h6 Front-end developer/ Back-end developer (3/2012 - 9/2013)
+
+					h6 Job description:
+					ul
+						li developing projects from square one on django
+						li web publishing (bootstrap, flat.ui)
+
+
+					h6 Developed projects:
+					ul
+						li http://studyjam.net/
+						li http://homeworkfox.com/
+						li http://nextadnet.com/
+						li http://itserviceus.com/
+
+			.media
+				.media-body
+					h4.media-heading ITMarketing, Kyiv, Ukraine
+					h6 Remote Web Developer (11/2011 - 2/2012)
+
+					h6 Job description:
+					ul
+						li making architectural changes
+						li implementing new features
+						li visual changes
+
+					h6 Developed projects:
+					ul
+						li http://ayur.com.ua/
+
+			.media
+				.media-body
+					h4.media-heading NSign, Moscow, Russia
+					h6 Remote Web Developer (2/2011 - 9/2011)
+
+					h6 Job description:
+					ul
+						li layout integration
+						li programming CMS modules
+						li client-side programming (JS/jQuery)
+						li bugfixes
+
+			.media
+				.media-body
+					h4.media-heading Modfree, Moscow, Russia
+					h6 Remote Full-stack Developer (9/2010 - 1/2011)
+
+					h6 Job description:
+					ul
+						li web publishing
+						li project developing
+						li server administration
+
+
