--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -1,12 +1,13 @@
 html, body, app {
-	height: 100%;
-	min-height: 100%;
+	background-color: #000;
+	min-height: 100vh;
 }
 
 app {
 	display: block;
 	background: #29262b;
 	color: #172e3c;
+	padding: 1em 0;
 
 	&.loaded {
 		background: url('../statics/images/bg-min.jpg');
@@ -19,7 +20,6 @@ app {
 
 .card {
 	background: rgba(255, 255, 255, .4);
-	border-radius: 10px;
 
 	.row {
 		margin-top: 0.5em;
@@ -28,7 +28,7 @@ app {
 }
 
 .photo {
-	border-radius: 10px;
+	border-radius: .25em;
 }
 
 .primary-links {
