--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -14,8 +14,6 @@ app {
 		background-size: cover;
 		background-position: 50% 0;
 	}
-
-	padding-top: 1em;
 }
 
 .card {
@@ -39,4 +37,26 @@ app {
 	.btn {
 		margin: 0.5em 0 0 0.5em;
 	}
+}
+
+
+.date {
+	width: 6em;
+	text-align: center;
+	padding: 0;
+	margin: 0;
+
+	background: red;
+}
+
+.date__date,
+.date__year {
+	//display: inline-block;
+}
+
+.date__date {
+	font-size: 1.8em;
+}
+.date__year {
+	font-size: 2em;
 }
