--- a/assets/templates/app.pug
+++ b/assets/templates/app.pug
@@ -43,7 +43,7 @@ mixin date(day,month,year)
 			span.pic.pic-reddit
 		a.btn.btn-primary(href='mailto:lost@middle-of-nowhere.name')
 			span.pic.pic-envelope
-.container.card(style='opacity: 1')
+.container.card(style='opacity: .1')
 	.row
 		.col-xs-12
 			h2 Employment history
