--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -11,7 +11,8 @@ app {
 
 	&.loaded {
 		background: url('../statics/images/bg-min.jpg');
-		background-size: cover;
+		background-size: auto 100vh;
+		background-attachment: fixed;
 		background-position: 50% 0;
 	}
 }
