--- a/app/root/styles/root.styl
+++ b/app/root/styles/root.styl
@@ -3,6 +3,7 @@
 	background: #29262b;
 	color: #172e3c;
 	padding: 1em 0;
+	min-height: 100vh;
 
 	&.loaded {
 		background: url('/build/statics/images/bg-min.jpg');
