Adding work module. Adding skills, adding typings for fetch, adding routing module

--- a/app/navbar/tmpl/navbar.pug
+++ b/app/navbar/tmpl/navbar.pug
@@ -1,5 +1,10 @@
 ul.nav.navbar-nav
-    li.nav-item('routerLinkActive'='active', '[routerLinkActiveOptions]'='{exact: true}')
-        a.nav-link('routerLink'='') Home
-    li.nav-item('routerLinkActive'='active')
-        a.nav-link('routerLink'='/cv') CV
+	li.nav-item('routerLinkActive'='active', '[routerLinkActiveOptions]'='{exact: true}')
+		a.nav-link('routerLink'='') Home
+	li.nav-item('routerLinkActive'='active')
+		a.nav-link('routerLink'='/work') Work
+	li.nav-item('routerLinkActive'='active')
+		a.nav-link('routerLink'='/projects') Projects
+	li.nav-item('routerLinkActive'='active')
+		a.nav-link('routerLink'='/pisulki') Pisulki
+
