--- a/app/work/cv/tmpl/cv.pug
+++ b/app/work/cv/tmpl/cv.pug
@@ -5,7 +5,7 @@ mixin date(day,month,year)
 		.row
 			.col-xs-12.date__year #{year}
 
-.container.card(style='opacity: .1')
+.container.card
 	.row
 		.col-xs-12
 			h2 Employment history
