Adding some skills

--- a/app/navbar/tmpl/navbar.pug
+++ b/app/navbar/tmpl/navbar.pug
@@ -1,10 +1,6 @@
-ul.nav.navbar-nav
-	li.nav-item('routerLinkActive'='active', '[routerLinkActiveOptions]'='{exact: true}')
-		a.nav-link('routerLink'='') Home
-	li.nav-item('routerLinkActive'='active')
-		a.nav-link('routerLink'='/work') Work
-	li.nav-item('routerLinkActive'='active')
-		a.nav-link('routerLink'='/projects') Projects
-	li.nav-item('routerLinkActive'='active')
-		a.nav-link('routerLink'='/pisulki') Pisulki
+nav.nav.justify-content-center
+	a.nav-link('routerLinkActive'='active', '[routerLinkActiveOptions]'='{exact: true}', 'routerLink'='') Home
+	a.nav-link('routerLinkActive'='active', 'routerLink'='/work') Work
+	a.nav-link('routerLinkActive'='active', 'routerLink'='/projects') Projects
+	a.nav-link('routerLinkActive'='active','routerLink'='/pisulki') Pisulki
 
