--- a/app/work/skills/tmpl/skill.pug
+++ b/app/work/skills/tmpl/skill.pug
@@ -1,3 +1,8 @@
-h1 {{skill.name}}
-p {{skill.description}}
+.media
+	ng-container('*ngIf'='skill.icon')
+		img.img-thumbnail.rounded.mr-3('[src]'='skill.icon')
+	.media-body
+		h4.mt-0 {{skill.name}}
+		h5 {{skill.category}} {{skill.type}}
+		span {{skill.description}}
 
