--- a/app/work/jobs/tmpl/jobs.pug
+++ b/app/work/jobs/tmpl/jobs.pug
@@ -1,110 +1,1 @@
-mixin date(day,month,year)
-	.date&attributes(attributes)
-		.row
-			.col-xs-12.date__date #{day}.#{month}
-		.row
-			.col-xs-12.date__year #{year}
-
-.container.card
-	.row
-		.col-xs-12
-			h2 Employment history
-
-			.media
-				.date.date-top
-					span.date__now NOW
-
-				.media-body
-					h4.media-heading Playtech, Kyiv, Ukraine
-					h6 Front-end developer / Dev Team Leader (10/2013 - current)
-
-					h6 Job description:
-					ul
-						li developing business features with Agile Scrum/Kanban
-						li improving development process with automation tools
-
-					h6 Developed projects:
-					ul
-						li http://www.acekingdom.com/
-						li http://casino.ladbrokes.com/
-						li http://poker.ladbrokes.com/
-						li http://livedealer.ladbrokes.com/
-						li http://vegas.ladbrokes.com/
-						li http://bingo.ladbrokes.com/
-						li ... etc
-
-				+date('04', '10', '2013').date-bottom
-
-
-			.media
-				+date('31', '09', '2013').date-bottom
-
-				.media-body
-					h4.media-heading Plasticjam, Kyiv, Ukraine
-					h6 Front-end developer/ Back-end developer (3/2012 - 9/2013)
-
-					h6 Job description:
-					ul
-						li developing projects from square one on django
-						li web publishing (bootstrap, flat.ui)
-
-					h6 Developed projects:
-					ul
-						li http://studyjam.net/
-						li http://homeworkfox.com/
-						li http://nextadnet.com/
-						li http://itserviceus.com/
-
-				+date('XX', '03', '2012').date-bottom
-
-			.media
-				+date('XX', '02', '2012').date-top
-
-				.media-body
-					h4.media-heading ITMarketing, Kyiv, Ukraine
-					h6 Remote Web Developer (11/2011 - 2/2012)
-
-					h6 Job description:
-					ul
-						li making architectural changes
-						li implementing new features
-						li visual changes
-
-					h6 Developed projects:
-					ul
-						li http://ayur.com.ua/
-
-				+date('XX', '11', '2011').date-bottom
-
-			.media
-				+date('XX', '09', '2011').date-bottom
-
-				.media-body
-					h4.media-heading NSign, Moscow, Russia
-					h6 Remote Web Developer (2/2011 - 9/2011)
-
-					h6 Job description:
-					ul
-						li layout integration
-						li programming CMS modules
-						li client-side programming (JS/jQuery)
-						li bugfixes
-
-			.date
-				span.date__display 02.2011
-
-			.date
-				span.date__display 01.2011
-
-			.media
-				.media-body
-					h4.media-heading Modfree, Moscow, Russia
-					h6 Remote Full-stack Developer (9/2010 - 1/2011)
-
-					h6 Job description:
-					ul
-						li web publishing
-						li project developing
-						li server administration
-
-			h3.text-xs-center ...
+h1 helo
