--- a/app/work/skills/tmpl/skills.pug
+++ b/app/work/skills/tmpl/skills.pug
@@ -1,8 +1,5 @@
-.container.card
+h2
+	ng-content('select'='.category')
+ng-container('*ngIf'='skills.length')
 	.row
-		.col-xs-12
-			h2 Skills
-
-			ng-container('*ngIf'='skills.length')
-				skill('[skill]'='skill', '*ngFor'='let skill of skills')
-
+		skill.col-lg-3.col-md-6('[skill]'='skill', '*ngFor'='let skill of skills')
