Adding some more of those skills

--- a/app/work/skills/styles/skill.styl
+++ b/app/work/skills/styles/skill.styl
@@ -2,11 +2,21 @@
 	//display: inline-block;
 }
 
-img {
-	max-width: 64px;
+img,
+.img-placeholder {
+	width: 64px;
 	height: 64px;
+}
+
+.img-placeholder {
+	display: inline-block;
+	background: #ccc;
 }
 
 .description {
 	font-size: 0.8em;
+}
+
+.badge {
+	font-size: 0.6em;
 }
