--- a/app/work/skills/tmpl/skills-route.pug
+++ b/app/work/skills/tmpl/skills-route.pug
@@ -3,11 +3,51 @@
 		.col
 			h1.display-1 Skills
 
+
+			h2 Technical
+
+			h4.category Data Science
+			skills('category'='data-science')
+
+			h4.category Programming Languages
 			skills('category'='programming-language')
-				span.category Programming Languages
 
+			h4.category Markup Languages
+			skills('category'='markup-language')
+
+			h4.category Frameworks
 			skills('category'='framework')
-				span.category Frameworks
 
+			h4.category Data Storage Systems
 			skills('category'='databases')
-				span.category Data Storage
+
+			h4.category Version Control Systems
+			skills('category'='version-control')
+
+			h4.category Style Sheet Languages
+			skills('category'='stylesheet-language')
+
+			h4.category Web Servers
+			skills('category'='web-server')
+
+			h4.category Server Administration
+			skills('category'='server')
+
+
+			h2 Communication
+
+			h4.category Technical & Business
+			skills('category'='communication-general')
+
+
+			h2 Project management
+
+			h4.category Methodologies
+			skills('category'='project-methodologies')
+
+			h4.category Trackers
+			skills('category'='project-trackers')
+
+			h2 Languages
+			skills('category'='languages')
+
