--- a/app/navbar/tmpl/navbar.pug
+++ b/app/navbar/tmpl/navbar.pug
@@ -1,5 +1,8 @@
 nav.nav.justify-content-center
-	a.nav-link('routerLinkActive'='active', '[routerLinkActiveOptions]'='{exact: true}', 'routerLink'='') Home
-	a.nav-link('routerLinkActive'='active', 'routerLink'='/work') Work
-	a.nav-link('routerLinkActive'='active', 'routerLink'='/projects') Projects
+	a.nav-link('routerLinkActive'='active', '[routerLinkActiveOptions]'='{exact: true}', 'routerLink'='') home();
+	a.nav-link('routerLinkActive'='active', 'routerLink'='/work/jobs') curriculumVitae();
+	a.nav-link('routerLinkActive'='active', 'routerLink'='/work/skills') skills();
+	a.nav-link('routerLinkActive'='active', 'routerLink'='/work/education') education();
+	a.nav-link('routerLinkActive'='active', 'routerLink'='/projects') projects();
+
 
