--- a/app/modules/projects/projects/tmpl/projects-route.pug
+++ b/app/modules/projects/projects/tmpl/projects-route.pug
@@ -3,4 +3,26 @@
 		.col
 			h1.display-1 Projects
 
+			h2 Chrome Extensions
+			p Google Chrome Extensions.
+			projects('category'='chrome-extension')
 
+			h2 Dev Challenge X Projects
+			p Projects, that were a part of a UA Dev Challenge X.
+			projects('category'='uawc-x')
+
+			//h2 Dev Challenge VIII Projects
+			//p Projects, that were a part of a UA Dev Challenge VIII.
+			//projects('category'='uawc-viii')
+
+			//h2 Dev Challenge VII Projects
+			//p Projects, that were a part of a UA Dev Challenge VII.
+			//projects('category'='uawc-vii')
+
+			//h2 Dev Challenge VI Projects
+			//p Projects, that were a part of a UA Dev Challenge VI.
+			//projects('category'='uawc-vi')
+
+			h2 Dev Challenge V Projects
+			p Projects, that were a part of a UA Dev Challenge V.
+			projects('category'='uawc-v')
