--- a/app/modules/work/skills/styles/skill.styl
+++ b/app/modules/work/skills/styles/skill.styl
@@ -11,6 +11,10 @@ img,
 .img-placeholder {
 	display: inline-block;
 	background: #ccc;
+	text-align: center;
+	font-size: 2em;
+
+	line-height: 64px;
 }
 
 .description {
