--- a/app/social/tmpl/social.pug
+++ b/app/social/tmpl/social.pug
@@ -1,4 +1,4 @@
-.container.card.primary-links(style='opacity: .2')
+.container.card(style='opacity: .2')
 	.row.text-xs-center
 		a.btn.btn-primary(href='https://github.com/mindfreakthemon/')
 			span.pic.pic-github
