--- a/app/modules/common/navbar/styles/navbar.styl
+++ b/app/modules/common/navbar/styles/navbar.styl
@@ -1,4 +1,5 @@
 :host {
+	display: block;
 	width: 100%;
 
 	font-family: Consolas, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -7,6 +8,7 @@
 
 .nav-link {
 	position: relative;
+	border-bottom: 1px solid transparent;
 }
 
 .active {
@@ -16,5 +18,5 @@
 		right: calc(100% - .5em);
 	}
 
-	border-bottom: 1px solid;
+	border-bottom-color: inherit;
 }
