--- a/app/root/styles/root.styl
+++ b/app/root/styles/root.styl
@@ -1,15 +1,13 @@
 :host {
 	display: block;
-	background: #29262b;
+	background: #000;
 	color: #172e3c;
-	padding: 1em 0;
-	min-height: 100vh;
-
+	min-height: 100%;
+	height: auto;
+	
 	&.loaded {
-		//background: url('/build/statics/images/bg-min.jpg');
-		//background-size: auto 100vh;
-		//background-attachment: fixed;
-		//background-position: 50% 0;
+		transition: background-color 500ms ease-out;
+		background-color: #29262b;
 	}
 
 }
