--- a/app/modules/work/education/tmpl/education-route.pug
+++ b/app/modules/work/education/tmpl/education-route.pug
@@ -3,4 +3,5 @@
 		.col
 			h1.display-1 Education
 
-			p Master degree at NTUU “KPI”, Faculty of Informatics and Computer Science
+			.text-center: img.w-75(src='/build/statics/images/kpi.png')
+			h4.display-4.text-center Master degree at NTUU “KPI”, Faculty of Informatics and Computer Science
