--- a/assets/index.pug
+++ b/assets/index.pug
@@ -11,18 +11,8 @@ html
 	body
 		root
 			.sk-circle
-				.sk-circle1.sk-child
-				.sk-circle2.sk-child
-				.sk-circle3.sk-child
-				.sk-circle4.sk-child
-				.sk-circle5.sk-child
-				.sk-circle6.sk-child
-				.sk-circle7.sk-child
-				.sk-circle8.sk-child
-				.sk-circle9.sk-child
-				.sk-circle10.sk-child
-				.sk-circle11.sk-child
-				.sk-circle12.sk-child
+				each _, i in Array(12)
+					.sk-child(class='sk-circle' + (i + 1))
 		//- inject:js
 		//- endinject
 		script(inline, src='systemjs.config.js')
