--- a/app/modules/common/navbar/tmpl/navbar.pug
+++ b/app/modules/common/navbar/tmpl/navbar.pug
@@ -1,7 +1,7 @@
 nav.nav.justify-content-center.flex-column.flex-sm-row
-	//a.nav-link('routerLinkActive'='active', '[routerLinkActiveOptions]'='{exact: true}', 'routerLink'='') home();
-	//a.nav-link('routerLinkActive'='active', 'routerLink'='/work/jobs') curriculumVitae();
-	//a.nav-link('routerLinkActive'='active', 'routerLink'='/work/skills') skills();
-	//a.nav-link('routerLinkActive'='active', 'routerLink'='/work/education') education();
-	//a.nav-link('routerLinkActive'='active', 'routerLink'='/projects') projects();
-	a.nav-link('routerLinkActive'='active', 'routerLink'='/assigner') assigner();
+	a.nav-link('routerLinkActive'='active', '[routerLinkActiveOptions]'='{exact: true}', 'routerLink'='') home();
+	a.nav-link('routerLinkActive'='active', 'routerLink'='/work/jobs') curriculumVitae();
+	a.nav-link('routerLinkActive'='active', 'routerLink'='/work/skills') skills();
+	a.nav-link('routerLinkActive'='active', 'routerLink'='/work/education') education();
+	a.nav-link('routerLinkActive'='active', 'routerLink'='/projects') projects();
+	//a.nav-link('routerLinkActive'='active', 'routerLink'='/assigner') assigner();
